Added Bootstrap to fix responsiveness

--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -5,38 +5,35 @@ body
   color: rgba(0,0,0,.8)
   text-align: center
   text-transform: uppercase
-  letter-spacing: .5em
-  top: 15%
+  letter-space: .4em
   background: linear-gradient(to right, #FF6AD5, #8795E8)
-
-.content
-  position: absolute
-  width: 99%
-  top: 30%
 
 input
   cursor: pointer
 
 h1
-  font: 600 4.3vmin 'Press Start 2P', cursive
+  font: 600 4.5vmin 'Press Start 2P', cursive
   color: rgba(0,0,0,.7)
   text-align: center
   text-transform: uppercase
   letter-spacing: .4em
   width: 100%
+  padding-top: 20%
+  padding-bottom: 20px
 
 h2
-  font: 600 2.8vmin 'Press Start 2P', cursive
+  font: 600 2vmin 'Press Start 2P', cursive
   color: rgba(0,0,0,.7)
   text-align: center
   text-transform: uppercase
   letterspacing: .5em
   width: 100%
+  padding-top: 25px
 
 h3
   font: 900 1.7vmin 'Press Start 2P', cursive
   color: rgba(0,0,0,.7)
   text-align: center
   text-transform: none
-  letter-spacing: 0.01em
+  letter-spacing: 0.001em
   line-height: 1.5
